fixed issue #53